--- a/power/src/app/gmb/gmb/gmb.component.html
+++ b/power/src/app/gmb/gmb/gmb.component.html
@@ -1,19 +1,28 @@
 <div class="container-xl">
 
-    <div class="row title">
-        <h1 *ngIf="mode === 'gmb'" i18n>Grundstücksmarktberichte (Archiv)</h1>
-        <h1 *ngIf="mode === 'lmb'" i18n>Landesgrundstücksmarktberichte (Archiv)</h1>
+    <div class="row title justify-content-center m-0 p-2 p-lg-3 text-center">
+        <h1 *ngIf="mode === 'gmb'"
+            i18n>Grundstücksmarktberichte (Archiv)</h1>
+        <h1 *ngIf="mode === 'lmb'"
+            i18n>Landesgrundstücksmarktberichte (Archiv)</h1>
     </div>
 
-    <div *ngIf="mode === 'gmb'" class="alert alert-info alert-gmb" role="alert">
-        Ein Archiv der Landesgrundstücksmarktberichte finden sie <a [routerLink]="['/landesgrundstuecksmarktberichte']" i18n>hier</a>.
+    <div *ngIf="mode === 'gmb'"
+         class="alert alert-info alert-gmb"
+         role="alert">
+        Ein Archiv der Landesgrundstücksmarktberichte finden sie <a [routerLink]="['/landesgrundstuecksmarktberichte']"
+           i18n>hier</a>.
     </div>
 
-    <div *ngIf="mode === 'lmb'" class="alert alert-info alert-gmb" role="alert">
-        Die Grundstücksmarktberichte finden sie <a [routerLink]="['/grundstuecksmarktberichte']" i18n>hier</a>.
+    <div *ngIf="mode === 'lmb'"
+         class="alert alert-info alert-gmb"
+         role="alert">
+        Die Grundstücksmarktberichte finden sie <a [routerLink]="['/grundstuecksmarktberichte']"
+           i18n>hier</a>.
     </div>
 
-    <div *ngIf="mode === 'gmb'" echarts
+    <div *ngIf="mode === 'gmb'"
+         echarts
          [options]="mapOptions"
          [loading]="!mapLoaded"
          (chartInit)="onChartInit($event)"
@@ -21,14 +30,23 @@
          class="demo-chart chart-map"></div>
 
 
-    <div *ngIf="mode === 'gmb'" class="row subtitle">
-        <h2 *ngIf="selectedKreis === undefined" i18n>Bitte wählen Sie einen Landkreis</h2>
-        <h2 *ngIf="selectedKreis !== undefined" i18n>Berichte für den Landkreis "{{kreise[selectedKreis]}}"</h2>
+    <div *ngIf="mode === 'gmb'"
+         class="row subtitle">
+        <h2 *ngIf="selectedKreis === undefined"
+            i18n>Bitte wählen Sie einen Landkreis</h2>
+        <h2 *ngIf="selectedKreis !== undefined"
+            i18n>Berichte für den Landkreis "{{kreise[selectedKreis]}}"</h2>
         <div class="col-md-12 dropdown">
-            <select id="landkreise" class="form-select" aria-label="Wählen die einen Landkreis" (change)="onChange($event.target.value)">
+            <select id="landkreise"
+                    class="form-select"
+                    aria-label="Wählen die einen Landkreis"
+                    (change)="onChange($event.target.value)">
                 <ng-container *ngFor="let kreis of selectMenu()">
-                    <option *ngIf="selectedKreis === kreis.key" value="{{ kreis.key }}" selected>{{ kreis.value }}</option>
-                    <option *ngIf="selectedKreis !== kreis.key" value="{{ kreis.key }}">{{ kreis.value }}</option>
+                    <option *ngIf="selectedKreis === kreis.key"
+                            value="{{ kreis.key }}"
+                            selected>{{ kreis.value }}</option>
+                    <option *ngIf="selectedKreis !== kreis.key"
+                            value="{{ kreis.key }}">{{ kreis.value }}</option>
 
                 </ng-container>
             </select>
@@ -38,7 +56,9 @@
 
     <br *ngIf="mode === 'lmb'">
 
-    <div *ngFor="let rd of berichteFiltered" class="card m-0 mb-2" role="table">
+    <div *ngFor="let rd of berichteFiltered"
+         class="card m-0 mb-2"
+         role="table">
         <div class="card-header">
             <div class="row">
                 <h5 class="col-md-12 mb-0"
@@ -50,30 +70,47 @@
             </div>
         </div>
         <div class="card-body">
-            <dl *ngFor="let bj of rd.berichte | keyvalue" class="row" role="rowgroup">
-                <div class="col-md-12">
+            <dl *ngFor="let bj of rd.berichte | keyvalue"
+                class="row"
+                role="rowgroup">
+                <div class="col-md-12 p-0">
                     <!-- Bodenrichtwert (brz) -->
-                    <input type="checkbox" [checked]="berichteOpened.indexOf(bj.value['file'].split('.')[0]) !== -1" (change)="checkValue($event)" id="dl{{bj.value['file'].split('.')[0]}}" (keypress)="keyPress($event)">
-                    <dt class="col-md-12" role="rowheader">
-                    <label for="dl{{bj.value['file'].split('.')[0]}}">
-                        <i-bs name="plusCircle" class="remove-check" aria-hidden="true"></i-bs>
-                        <i-bs name="dashCircle" class="display-check" aria-hidden="true"></i-bs>&nbsp;
-                        <ng-container *ngIf="rd.name === 'Niedersachsen'; else gmb" i18n>Landesgrundstücksmarktbericht</ng-container>
-                        <ng-template #gmb i18n>Grundstücksmarktbericht</ng-template>
-                        {{bj.key}}
-                    </label>
+                    <input type="checkbox"
+                           [checked]="berichteOpened.indexOf(bj.value['file'].split('.')[0]) !== -1"
+                           (change)="checkValue($event)"
+                           id="dl{{bj.value['file'].split('.')[0]}}"
+                           (keypress)="keyPress($event)">
+                    <dt class="col-md-12"
+                        role="rowheader">
+                        <label for="dl{{bj.value['file'].split('.')[0]}}">
+                            <i-bs name="plusCircle"
+                                  class="remove-check"
+                                  aria-hidden="true"></i-bs>
+                            <i-bs name="dashCircle"
+                                  class="display-check"
+                                  aria-hidden="true"></i-bs>&nbsp;
+                            <ng-container *ngIf="rd.name === 'Niedersachsen'; else gmb"
+                                          i18n>Landesgrundstücksmarktbericht</ng-container>
+                            <ng-template #gmb
+                                         i18n>Grundstücksmarktbericht</ng-template>
+                            {{bj.key}}
+                        </label>
                     </dt>
-                    <dd class="col-md-12 fileinfo display-check" role="cell">
-                    <i-bs name="download" aria-hidden="true"></i-bs> {{bj.value['file']}} (<a href="{{downloadPath}}/{{bj.value['fileurl']}}" target="_blank" i18n>Downlaod</a>)<br>
-                    <small>
-                        <ng-container i18n>Bereiche</ng-container>: {{generateKreisliste(bj.value['bereich'])}}
-                    </small>
-                    <br><br>
-                    <small>
-                        MD5: {{bj.value['checksum']['md5']}}<br>
-                        SHA1: {{bj.value['checksum']['sha1']}}<br>
-                        SHA256: {{bj.value['checksum']['sha256']}}
-                    </small>
+                    <dd class="col-md-12 p-0 fileinfo display-check"
+                        role="cell">
+                        <i-bs name="download"
+                              aria-hidden="true"></i-bs> {{bj.value['file']}} (<a
+                           href="{{downloadPath}}/{{bj.value['fileurl']}}"
+                           target="_blank"
+                           i18n>Download</a>)<br>
+                        <small>
+                            <ng-container i18n>Bereiche</ng-container>: {{generateKreisliste(bj.value['bereich'])}}
+                        </small>
+                        <div class="checksum">
+                            <div>MD5: {{bj.value['checksum']['md5']}}</div>
+                            <div>SHA1: {{bj.value['checksum']['sha1']}}</div>
+                            <div>SHA256: {{bj.value['checksum']['sha256']}}</div>
+                        </div>
                     </dd>
                 </div>
             </dl>
@@ -83,9 +120,9 @@
     <br>
     <br>
 
-    <small *ngIf="mode === 'gmb'" i18n>
-        * Die dargestellten Landkreise stellen den Gebietsstand vom 01.01.2020 dar.<br>
-        Es können Abweichungen zu den Ständen der Grundstücksmarktberichte vorhanden sein.
+    <small *ngIf="mode === 'gmb'"
+           i18n>* Die dargestellten Landkreise stellen den Gebietsstand vom 01.01.2020 dar.
+        <br>Es können Abweichungen zu den Ständen der Grundstücksmarktberichte vorhanden sein.
     </small>
 </div>
 
