--- a/power/src/app/static/start/start.component.html
+++ b/power/src/app/static/start/start.component.html
@@ -201,7 +201,7 @@
                         Bremen und Bremerhaven zur Verfügung.</p>
                 </div>
             </div>
-            <div class="col-md-5"
+            <div class="col-md-5 d-flex justify-content-center align-self-center"
                  aria-hidden="true">
                 <a [routerLink]="['/bodenrichtwerte']"
                    i18n-title
@@ -238,7 +238,7 @@
                         kostenfrei verfügbar und werden als PDF-Dokumente bereitgestellt.</p>
                 </div>
             </div>
-            <div class="col-md-5"
+            <div class="col-md-5 d-flex justify-content-center align-self-center"
                  aria-hidden="true">
                 <a [routerLink]="['/grundstuecksmarktberichte']"
                    i18n-title
@@ -276,7 +276,7 @@
                         Dashboards.</p>
                 </div>
             </div>
-            <div class="col-md-5"
+            <div class="col-md-5 d-flex justify-content-center align-self-center"
                  aria-hidden="true">
                 <a href="https://www.gag.niedersachsen.de/grundstuecksmarktinformationen/2021/grundstucksmarktdaten-2021-196961.html"
                    target="_blank"
@@ -316,7 +316,7 @@
                         Grundstückswerte.</p>
                 </div>
             </div>
-            <div class="col-md-5 order-md-1"
+            <div class="col-md-5 d-flex justify-content-center align-self-center"
                  aria-hidden="true">
                 <a [routerLink]="['/immobilienpreisindex']"
                    i18n-title
@@ -356,7 +356,7 @@
                         werden. Eine Auskunft auf Grundlage des Immobilien-Preis-Kalkulators ist gebührenpflichtig.</p>
                 </div>
             </div>
-            <div class="col-md-5"
+            <div class="col-md-5 d-flex justify-content-center align-self-center"
                  aria-hidden="true">
                 <a href="https://www.boris.niedersachsen.de/boris/ipk"
                    target="_blank"
@@ -394,7 +394,7 @@
                         Bremen und Bremerhaven zur Verfügung.</p>
                 </div>
             </div>
-            <div class="col-md-5"
+            <div class="col-md-5 d-flex justify-content-center align-self-center"
                  aria-hidden="true">
                 <a [routerLink]="['/bodenwertkalkulator']"
                    i18n-title
@@ -471,7 +471,7 @@
                     </form>
                 </div>
             </div>
-            <div class="col-md-5"
+            <div class="col-md-5 d-flex justify-content-center align-self-center"
                  aria-hidden="true">
                 <a [routerLink]="['/forms']"
                    i18n-title
