--- a/power/src/app/shared/geosearch/geosearch.component.html
+++ b/power/src/app/shared/geosearch/geosearch.component.html
@@ -1,6 +1,5 @@
 <div class="input-group p-1">
-    <input #geosearch
-           id="geosearch-input"
+    <input #geosearchInput
            type="text"
            class="form-control"
            placement="bottom"
