Add einfache sprache to language selection

--- a/power/src/app/app.component.html
+++ b/power/src/app/app.component.html
@@ -349,6 +349,12 @@
                                    rel="noopener">Deutsch</a>
                             </li>
                             <li class="my-1">
+                                <a href="/de-simple{{ baseurl }}"
+                                   class="footer-link"
+                                   lang="de"
+                                   rel="noopener">Einfache Sprache</a>
+                            </li>
+                            <li class="my-1">
                                 <a href="/en{{ baseurl }}"
                                    class="footer-link"
                                    lang="en"
