--- a/power/src/app/static/start/start.component.html
+++ b/power/src/app/static/start/start.component.html
@@ -353,7 +353,9 @@
                         Eigentumswohnung abschätzen. Der Immobilien-Preis-Kalkulator basiert auf Marktmodellen
                         (Vergleichsfaktoren), die durch die Gutachterausschüsse für Grundstückswerte aus der
                         Kaufpreissammlung mit Hilfe mathematisch-statistischer Verfahren (multiple Regression) ermittelt
-                        werden. Eine Auskunft auf Grundlage des Immobilien-Preis-Kalkulators ist gebührenpflichtig.</p>
+                        werden. Eine Auskunft auf Grundlage des Immobilien-Preis-Kalkulators ist
+                        <strong class="font-weight-bold">gebührenpflichtig</strong>.
+                    </p>
                 </div>
             </div>
             <div class="col-md-5 d-flex justify-content-center align-self-center"
