--- a/power/src/app/bodenrichtwert/bodenrichtwert-detail/bodenrichtwert-detail.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-detail/bodenrichtwert-detail.component.html
@@ -246,7 +246,7 @@
                 {{feature.properties.bem | hyphenate}}
             </dd>
             <!-- Umrechnungskoeffizienten -->
-            <!-- Umrechnungstabellenwerte - currently just for brw zones which don't have an umrechnungsdatei -->
+            <!-- Umrechnungstabellenwerte -->
             <!-- <ng-container
                           *ngIf="feature.properties.umrechnungstabellenwerte && !feature.properties.umrechnungstabellendatei.length">
                 <ng-container *ngFor="let umrechnung of feature.properties.umrechnungstabellenwerte"> -->
